# Games101Homework

./: .gitignore  README.md
pa0/: CMakeLists.txt  main.cpp
pa00/: CMakeLists.txt  main.cpp  pa00.sln
pa00/pa00/: pa00.vcxproj
pa01/: main.cpp  pa01.sln  references.txt
pa01/pa01/: pa01.vcxproj  pa01.vcxproj.filters
pa02/: main.cpp  pa02.sln  rasterizer.cpp
pa02/pa02/: pa02.vcxproj  pa02.vcxproj.filters
pa03/: main.cpp  pa03.sln  rasterizer.cpp
pa03/pa03/: pa03.vcxproj  pa03.vcxproj.filters
pa04/: main.cpp  pa04.sln
pa04/pa04/: pa04.vcxproj
ptemptest/: main.cpp  ptemptest.sln
ptemptest/ptemptest/: ptemptest.vcxproj
